Fix dark mode autocomplete colours

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -173,8 +173,8 @@ main {
 [data-theme="dark"] {
   --background-colour: oklch(21.36% 0.048 257.95);
   --text-colour: oklch(93.06% 0.041 211.84);
-  --hover-bg-colour: oklch(58.14% 0.056 237.42);
-  --hover-text-colour: oklch(100% 0 0);
+  --hover-bg-colour: white;
+  --hover-text-colour: black;
   --input-bg-colour: oklch(15.36% 0.048 257.95);
   --input-border-colour: black;
   --box-arrow-colour: oklch(93.06% 0.041 211.84);
